Fixed layout bug in cookies view and adjusted dialog and site column sizes.
BUG=95381, 110380
TEST=see first ticket


Review URL: http://codereview.chromium.org/10108018

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@132604 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: fd1f817ad8cce4a048e25d87328d0c806900a3cf

--- a/chrome/browser/resources/options2/cookies_view.css
+++ b/chrome/browser/resources/options2/cookies_view.css
@@ -6,7 +6,7 @@
 #cookies-view-page {
   height: 90%;
   margin-left: -15px;
-  min-width: 700px;
+  min-width: 720px;
 }
 
 /* Styles for the cookies list elements in cookies_view.html. */
@@ -49,7 +49,7 @@ html[dir=rtl] #remove-all-cookies-search-column {
 #cookies-site-column {
   display: inline-block;
   font-weight: bold;
-  width: 11em;
+  width: 14em;
 }
 
 #cookies-data-column {
@@ -93,7 +93,7 @@ html[dir=rtl] list.cookie-list > .deletable-item > .close-button {
   display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: 11em;
+  width: 14em;
 }
 
 list.cookie-list > .deletable-item[selected] .cookie-site {
@@ -102,12 +102,15 @@ list.cookie-list > .deletable-item[selected] .cookie-site {
 
 .cookie-data {
   display: inline-block;
+  max-width: 410px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .cookie-size {
   display: inline-block;
   float: right;
-  margin-right: 3em;
+  margin-right: 0;
 }
 
 list.cookie-list > .deletable-item[selected] .cookie-data {
@@ -118,7 +121,7 @@ list.cookie-list > .deletable-item[selected] .cookie-data {
 /* Styles for the individual items (cookies, etc.). */
 .cookie-items {
   /* Notice that the margin and padding match up with those above. */
-  -webkit-margin-start: 11em;
+  -webkit-margin-start: 14em;
   -webkit-padding-start: 7px;
   -webkit-transition: 150ms ease-in-out;
   height: 0;
